Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36348

Application asserts on printing with custom pageSizes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.2.0
    • GUI: Printing
    • None
    • Windows
    • df96862ae366c5a3b0af8436fe1c3997a10ee656 (dev, 28.1.2014, 5.3)

    Description

      When printing with custom PageSizes, my application asserts.

      ASSERT failure in QList<T>::at: "index out of range", file ../../include/QtCore/../../src/corelib/tools/qlist.h, line 472

      Digging through the code i found in:
      void QWin32PrintEnginePrivate::updateCustomPaperSize() on
      qtbase\src\printsupport\kernel\qprintengine_win.cpp:1966

      this: paper_size = paperSizes.at(paperSize).first;

      shouldn't paperSize be i?

      Attached is a patch that seems to fix the issue.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              thelinker Axel Bayerl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes