qprintengine_win.cpp: Fix assert when printing with custom page sizes.

Task-number: QTBUG-36348

Change-Id: I57c8905e007ccd9cf558af03f19f2969009b32c2
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: John Layt <jlayt@kde.org>

cregit: df96862ae366c5a3b0af8436fe1c3997a10ee656 https://github.com/qt/qtbase/commit/df96862ae366c5a3b0af8436fe1c3997a10ee656